--- a/AlgorithmGossip/PerfectNumber.htm
+++ b/AlgorithmGossip/PerfectNumber.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>§¹¬ü¼Æ</title>
+  <title>å®Œç¾æ•¸</title>
 </head>
 
 
@@ -51,14 +51,14 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;§¹¬ü¼Æ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å®Œç¾æ•¸</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦pªG¦³¤@¼Æn¡A¨ä¯u¦]¼Æ¡]Proper factor¡^ªºÁ`©Mµ¥©ón¡A«hºÙ¤§¬°§¹¬ü¼Æ¡]Perfect Number¡^¡A¨Ò¦p¥H¤U´X­Ó¼Æ³£¬O§¹¬ü¼Æ¡G<br>
+å¦‚æœæœ‰ä¸€æ•¸nï¼Œå…¶çœŸå› æ•¸ï¼ˆProper factorï¼‰çš„ç¸½å’Œç­‰æ–¼nï¼Œå‰‡ç¨±ä¹‹ç‚ºå®Œç¾æ•¸ï¼ˆPerfect Numberï¼‰ï¼Œä¾‹å¦‚ä»¥ä¸‹å¹¾å€‹æ•¸éƒ½æ˜¯å®Œç¾æ•¸ï¼š<br>
 
 <div style="margin-left: 40px; font-weight: bold;"><span style="font-family: Courier New,Courier,monospace;">6 = 1 + 2 + 3</span><br style="font-family: Courier New,Courier,monospace;">
 <span style="font-family: Courier New,Courier,monospace;">
@@ -70,25 +70,25 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-µ{¦¡°ò¥»¤W¤£Ãø¡A²Ä¤@²´¬İ¨ì®É·|·Q¨ì¨Ï¥Î°j°é¨D¥X©Ò¦³¯u¦]¼Æ¡A¦A¶i¤@¨B¨D¦]¼Æ©M¡A¤£¹L­Yn­È«Ü¤j¡A«h¦¹ªk·|ªá¶O³\¦h®É¶¡¦b°j°é´ú¸Õ¤W¡A¤Q¤À¨S¦³®Ä²v¡A¨Ò¦p¨D¤p©ó10000ªº©Ò¦³§¹¬ü¼Æ¡C<br>
+ç¨‹å¼åŸºæœ¬ä¸Šä¸é›£ï¼Œç¬¬ä¸€çœ¼çœ‹åˆ°æ™‚æœƒæƒ³åˆ°ä½¿ç”¨è¿´åœˆæ±‚å‡ºæ‰€æœ‰çœŸå› æ•¸ï¼Œå†é€²ä¸€æ­¥æ±‚å› æ•¸å’Œï¼Œä¸éè‹¥nå€¼å¾ˆå¤§ï¼Œå‰‡æ­¤æ³•æœƒèŠ±è²»è¨±å¤šæ™‚é–“åœ¨è¿´åœˆæ¸¬è©¦ä¸Šï¼Œååˆ†æ²’æœ‰æ•ˆç‡ï¼Œä¾‹å¦‚æ±‚å°æ–¼10000çš„æ‰€æœ‰å®Œç¾æ•¸ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦p¦ó¨D¤p©ó10000ªº©Ò¦³§¹¬ü¼Æ¡H¨Ã±Nµ{¦¡¼gªº¦³®Ä²v¡H°ò¥»¤W¦³¤T­Ó¨BÆJ¡G<br>
+å¦‚ä½•æ±‚å°æ–¼10000çš„æ‰€æœ‰å®Œç¾æ•¸ï¼Ÿä¸¦å°‡ç¨‹å¼å¯«çš„æœ‰æ•ˆç‡ï¼ŸåŸºæœ¬ä¸Šæœ‰ä¸‰å€‹æ­¥é©Ÿï¼š<br>
 
 <ol>
 
-  <li>¨D¥X¤@©w¼Æ¥Øªº½è¼Æªí</li>
+  <li>æ±‚å‡ºä¸€å®šæ•¸ç›®çš„è³ªæ•¸è¡¨</li>
 
-  <li>§Q¥Î½è¼Æªí¨D«ü©w¼Æªº¦]¦¡¤À¸Ñ</li>
+  <li>åˆ©ç”¨è³ªæ•¸è¡¨æ±‚æŒ‡å®šæ•¸çš„å› å¼åˆ†è§£</li>
 
-  <li>§Q¥Î¦]¦¡¤À¸Ñ¨D©Ò¦³¯u¦]¼Æ©M¡A¨ÃÀË¬d¬O§_¬°§¹¬ü¼Æ</li>
+  <li>åˆ©ç”¨å› å¼åˆ†è§£æ±‚æ‰€æœ‰çœŸå› æ•¸å’Œï¼Œä¸¦æª¢æŸ¥æ˜¯å¦ç‚ºå®Œç¾æ•¸</li>
 
 </ol>
 
 <br>
 
-<a href="EratosthenesPrime.htm">¨BÆJ¤@</a> »P <a href="GCDPNumber.htm">¨BÆJ¤G</a> ¦b¤§«e°Q½×¹L¤F¡A°İÃD¦b¨BÆJ¤T¡A¦p¦ó¨D¯u¦]¼Æ©M¡H¤èªk«ÜÂ²³æ¡A­n¥ıª¾¹D±N©Ò¦³¯u¦]¼Æ©M¥[¤W¸Ó¼Æ¥»¨­¡A·|µ¥©ó¸Ó¼Æªº¨â­¿¡A¨Ò¦p¡G<br>
+<a href="EratosthenesPrime.htm">æ­¥é©Ÿä¸€</a> èˆ‡ <a href="GCDPNumber.htm">æ­¥é©ŸäºŒ</a> åœ¨ä¹‹å‰è¨è«–éäº†ï¼Œå•é¡Œåœ¨æ­¥é©Ÿä¸‰ï¼Œå¦‚ä½•æ±‚çœŸå› æ•¸å’Œï¼Ÿæ–¹æ³•å¾ˆç°¡å–®ï¼Œè¦å…ˆçŸ¥é“å°‡æ‰€æœ‰çœŸå› æ•¸å’ŒåŠ ä¸Šè©²æ•¸æœ¬èº«ï¼Œæœƒç­‰æ–¼è©²æ•¸çš„å…©å€ï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">2 * 28 = 1 + 2 + 4 + 7 + 14 + 28</span><br>
 
@@ -96,7 +96,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-µ¥¦¡«á­±¥i¥H¤Æ¬°¡G<br>
+ç­‰å¼å¾Œé¢å¯ä»¥åŒ–ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">2 * 28 = (2</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">0</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"> + 2</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">1</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"> + 2</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">2</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">) * (7</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">0</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"> + 7</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">1</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">)</span><br>
 
@@ -104,14 +104,14 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-©Ò¥H¥u­n¨D¥X¦]¦¡¤À¸Ñ¡A´N¥i¥H§Q¥Î°j°é¨D±oµ¥¦¡«á­±ªº­È¡A±N¸Ó­È°£¥H2´N¬O¯u¦]¼Æ©M¤F¡Fµ¥¦¡«á­±²Ä¤@²´¬İ®É¥i¯à·Q¨ì¨Ï¥Îµ¥¤ñ¯Å¼Æ¤½¦¡¨Ó¸Ñ¡A¤£¹L·|¨Ï¥Î¨ì¦¸¤è¹Bºâ¡A¥i¥H¦b°j°é¨«³X¦]¦¡¤À¸Ñ°}¦C®É¡A¦P®É­pºâ¥Xµ¥¦¡«á­±ªº­È¡A³o¦b¤U­±ªº¹ê§@¤¤¥i¥H¬İ¨ì¡C <br>
+æ‰€ä»¥åªè¦æ±‚å‡ºå› å¼åˆ†è§£ï¼Œå°±å¯ä»¥åˆ©ç”¨è¿´åœˆæ±‚å¾—ç­‰å¼å¾Œé¢çš„å€¼ï¼Œå°‡è©²å€¼é™¤ä»¥2å°±æ˜¯çœŸå› æ•¸å’Œäº†ï¼›ç­‰å¼å¾Œé¢ç¬¬ä¸€çœ¼çœ‹æ™‚å¯èƒ½æƒ³åˆ°ä½¿ç”¨ç­‰æ¯”ç´šæ•¸å…¬å¼ä¾†è§£ï¼Œä¸éæœƒä½¿ç”¨åˆ°æ¬¡æ–¹é‹ç®—ï¼Œå¯ä»¥åœ¨è¿´åœˆèµ°è¨ªå› å¼åˆ†è§£é™£åˆ—æ™‚ï¼ŒåŒæ™‚è¨ˆç®—å‡ºç­‰å¼å¾Œé¢çš„å€¼ï¼Œé€™åœ¨ä¸‹é¢çš„å¯¦ä½œä¸­å¯ä»¥çœ‹åˆ°ã€‚ <br>
 
 
 
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -122,7 +122,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br>#define P 10000 <br><br>int prime(int*);  // ¨D½è¼Æªí <br>int factor(int*, int, int*);  // ¨Dfactor <br>int fsum(int*, int);  // sum ot proper factor <br><br>int main(void) { <br>    int ptable[N+1] = {0}; // Àx¦s½è¼Æªí <br>    int fact[N+1] = {0};   // Àx¦s¦]¦¡¤À¸Ñµ²ªG <br>    int count1, count2, i; <br><br>    count1 = prime(ptable); <br><br>    for(i = 0; i &lt;= P; i++) { <br>        count2 = factor(ptable, i, fact); <br>        if(i == fsum(fact, count2)) <br>            printf("Perfect Number: %d\n", i); <br>    } <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int prime(int* pNum) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2, j = 0; i &lt; N; i++) { <br>        if(prime[i] == 1) <br>            pNum[j++] = i; <br>    } <br><br>    return j; <br>} <br><br>int factor(int* table, int num, int* frecord) { <br>    int i, k; <br><br>    for(i = 0, k = 0; table[i] * table[i] &lt;= num;) { <br>        if(num % table[i] == 0) { <br>            frecord[k] = table[i]; <br>            k++; <br>            num /= table[i]; <br>        } <br>        else <br>            i++; <br>    } <br><br>    frecord[k] = num; <br><br>    return k+1; <br>} <br><br>int fsum(int* farr, int c) { <br>    int i, r, s, q; <br><br>    i = 0; <br>    r = 1; <br>    s = 1; <br>    q = 1; <br><br>    while(i &lt; c) { <br>        do { <br>            r *= farr[i]; <br>            q += r; <br>            i++; <br>        } while(i &lt; c-1 &amp;&amp; farr[i-1] == farr[i]); <br>        s *= q; <br>        r = 1; <br>        q = 1; <br>    } <br><br>    return s / 2; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br>#define P 10000 <br><br>int prime(int*);  // æ±‚è³ªæ•¸è¡¨ <br>int factor(int*, int, int*);  // æ±‚factor <br>int fsum(int*, int);  // sum ot proper factor <br><br>int main(void) { <br>    int ptable[N+1] = {0}; // å„²å­˜è³ªæ•¸è¡¨ <br>    int fact[N+1] = {0};   // å„²å­˜å› å¼åˆ†è§£çµæœ <br>    int count1, count2, i; <br><br>    count1 = prime(ptable); <br><br>    for(i = 0; i &lt;= P; i++) { <br>        count2 = factor(ptable, i, fact); <br>        if(i == fsum(fact, count2)) <br>            printf("Perfect Number: %d\n", i); <br>    } <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int prime(int* pNum) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2, j = 0; i &lt; N; i++) { <br>        if(prime[i] == 1) <br>            pNum[j++] = i; <br>    } <br><br>    return j; <br>} <br><br>int factor(int* table, int num, int* frecord) { <br>    int i, k; <br><br>    for(i = 0, k = 0; table[i] * table[i] &lt;= num;) { <br>        if(num % table[i] == 0) { <br>            frecord[k] = table[i]; <br>            k++; <br>            num /= table[i]; <br>        } <br>        else <br>            i++; <br>    } <br><br>    frecord[k] = num; <br><br>    return k+1; <br>} <br><br>int fsum(int* farr, int c) { <br>    int i, r, s, q; <br><br>    i = 0; <br>    r = 1; <br>    s = 1; <br>    q = 1; <br><br>    while(i &lt; c) { <br>        do { <br>            r *= farr[i]; <br>            q += r; <br>            i++; <br>        } while(i &lt; c-1 &amp;&amp; farr[i-1] == farr[i]); <br>        s *= q; <br>        r = 1; <br>        q = 1; <br>    } <br><br>    return s / 2; <br>} <br></pre>
 
 
 <br>
