--- a/AlgorithmGossip/InFixPostfix.htm
+++ b/AlgorithmGossip/InFixPostfix.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¤¤§Ç¦¡Âà«á§Ç¦¡¡]«e§Ç¦¡¡^</title>
+  <title>ä¸­åºå¼è½‰å¾Œåºå¼ï¼ˆå‰åºå¼ï¼‰</title>
 </head>
 
 
@@ -51,24 +51,24 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¤¤§Ç¦¡Âà«á§Ç¦¡¡]«e§Ç¦¡¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ä¸­åºå¼è½‰å¾Œåºå¼ï¼ˆå‰åºå¼ï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¥­±`©Ò¨Ï¥Îªº¹Bºâ¦¡¡A¥D­n¬O±N¹Bºâ¤¸©ñ¦b¹Bºâ¤lªº¨â®Ç¡A¨Ò¦pa+b/d³o¼Ëªº¦¡¤l¡A³oºÙ¤§¬°¤¤§Ç¡]Infix¡^ªí¥Ü¦¡¡A¹ï©ó¤HÃş¨Ó»¡¡A³o¼Ëªº¦¡¤l«Ü®e©ö²z
-¸Ñ¡A¦ı¥Ñ©ó¹q¸£°õ¦æ«ü¥O®É¬O¦³¶¶§Çªº¡A¹J¨ì¤¤§Çªí¥Ü¦¡®É¡AµLªkª½±µ¶i¦æ¹Bºâ¡A¦Ó¥²¶·¶i¤@¨B§PÂ_¹Bºâªº¥ı«á¶¶§Ç¡A©Ò¥H¥²¶·±N¤¤§Çªí¥Ü¦¡Âà´«¬°¥t¤@ºØªí¥Ü¤è
-ªk¡C<br>
+å¹³å¸¸æ‰€ä½¿ç”¨çš„é‹ç®—å¼ï¼Œä¸»è¦æ˜¯å°‡é‹ç®—å…ƒæ”¾åœ¨é‹ç®—å­çš„å…©æ—ï¼Œä¾‹å¦‚a+b/dé€™æ¨£çš„å¼å­ï¼Œé€™ç¨±ä¹‹ç‚ºä¸­åºï¼ˆInfixï¼‰è¡¨ç¤ºå¼ï¼Œå°æ–¼äººé¡ä¾†èªªï¼Œé€™æ¨£çš„å¼å­å¾ˆå®¹æ˜“ç†
+è§£ï¼Œä½†ç”±æ–¼é›»è…¦åŸ·è¡ŒæŒ‡ä»¤æ™‚æ˜¯æœ‰é †åºçš„ï¼Œé‡åˆ°ä¸­åºè¡¨ç¤ºå¼æ™‚ï¼Œç„¡æ³•ç›´æ¥é€²è¡Œé‹ç®—ï¼Œè€Œå¿…é ˆé€²ä¸€æ­¥åˆ¤æ–·é‹ç®—çš„å…ˆå¾Œé †åºï¼Œæ‰€ä»¥å¿…é ˆå°‡ä¸­åºè¡¨ç¤ºå¼è½‰æ›ç‚ºå¦ä¸€ç¨®è¡¨ç¤ºæ–¹
+æ³•ã€‚<br>
 
 <br>
 
-¥i¥H±N¤¤§Çªí¥Ü¦¡Âà´«¬°«á§Ç¡]Postfix¡^ªí¥Ü¦¡¡A«á§Çªí¥Ü¦¡¤SºÙ¤§¬°°f¦VªiÄõªí¥Ü¦¡¡]Reverse polish notation¡^¡A¥¦¬O¥ÑªiÄõªº¼Æ¾Ç®a¿c¥dÁÂºû©_´£¥X¡A¨Ò¦p(a+b)*(c+d)³o­Ó¦¡¤l¡Aªí¥Ü¬°«á§Çªí¥Ü¦¡®É¬Oab+cd+*¡C<br>
+å¯ä»¥å°‡ä¸­åºè¡¨ç¤ºå¼è½‰æ›ç‚ºå¾Œåºï¼ˆPostfixï¼‰è¡¨ç¤ºå¼ï¼Œå¾Œåºè¡¨ç¤ºå¼åˆç¨±ä¹‹ç‚ºé€†å‘æ³¢è˜­è¡¨ç¤ºå¼ï¼ˆReverse polish notationï¼‰ï¼Œå®ƒæ˜¯ç”±æ³¢è˜­çš„æ•¸å­¸å®¶ç›§å¡è¬ç¶­å¥‡æå‡ºï¼Œä¾‹å¦‚(a+b)*(c+d)é€™å€‹å¼å­ï¼Œè¡¨ç¤ºç‚ºå¾Œåºè¡¨ç¤ºå¼æ™‚æ˜¯ab+cd+*ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¥Î¤âºâªº¤è¦¡¨Ó­pºâ«á§Ç¦¡¬Û·íªºÂ²³æ¡A±N¹Bºâ¤l¨â®Çªº¹Bºâ¤¸¨Ì¥ı«á¶¶§Ç¥ş¬A¸¹°_¨Ó¡AµM«á±N©Ò¦³ªº¥k¬A¸¹¨ú¥N¬°¥ªÃä³Ì±µªñªº¹Bºâ¤l¡]±q³Ì¤º¼h¬A¸¹¶}©l¡^¡A³Ì«á¥h±¼©Ò¦³ªº¥ª¬A¸¹´N¥i¥H§¹¦¨«á§Çªí¥Ü¦¡¡A¨Ò¦p¡G<br>
+ç”¨æ‰‹ç®—çš„æ–¹å¼ä¾†è¨ˆç®—å¾Œåºå¼ç›¸ç•¶çš„ç°¡å–®ï¼Œå°‡é‹ç®—å­å…©æ—çš„é‹ç®—å…ƒä¾å…ˆå¾Œé †åºå…¨æ‹¬è™Ÿèµ·ä¾†ï¼Œç„¶å¾Œå°‡æ‰€æœ‰çš„å³æ‹¬è™Ÿå–ä»£ç‚ºå·¦é‚Šæœ€æ¥è¿‘çš„é‹ç®—å­ï¼ˆå¾æœ€å…§å±¤æ‹¬è™Ÿé–‹å§‹ï¼‰ï¼Œæœ€å¾Œå»æ‰æ‰€æœ‰çš„å·¦æ‹¬è™Ÿå°±å¯ä»¥å®Œæˆå¾Œåºè¡¨ç¤ºå¼ï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">a+b*d+c/d &nbsp; =&gt;&nbsp; &nbsp; ((a+(b*d))+(c/d)) -&gt; bd*+cd/+</span><br>
 
@@ -76,14 +76,14 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦pªG­n¥Îµ{¦¡¨Ó¶i¦æ¤¤§ÇÂà«á§Ç¡A«h¥²¶·¨Ï¥Î°ïÅ|¡Aºtºâªk«ÜÂ²³æ¡Aª½±µ±Ô­zªº¸Ü´N¬O¨Ï¥Î°j°é¡A¨ú¥X¤¤§Ç¦¡ªº¦r¤¸¡A¹J¹Bºâ¤¸ª½±µ¿é¥X¡A°ïÅ|¹Bºâ¤l»P¥ª¬A¸¹¡A ISP&gt;ICPªº¸Üª½±µ¿é¥X°ïÅ|¤¤ªº¹Bºâ¤l¡A¹J¥k¬A¸¹¿é¥X°ïÅ|¤¤ªº¹Bºâ¤l¦Ü¥ª¬A¸¹¡C <br>
+å¦‚æœè¦ç”¨ç¨‹å¼ä¾†é€²è¡Œä¸­åºè½‰å¾Œåºï¼Œå‰‡å¿…é ˆä½¿ç”¨å †ç–Šï¼Œæ¼”ç®—æ³•å¾ˆç°¡å–®ï¼Œç›´æ¥æ•˜è¿°çš„è©±å°±æ˜¯ä½¿ç”¨è¿´åœˆï¼Œå–å‡ºä¸­åºå¼çš„å­—å…ƒï¼Œé‡é‹ç®—å…ƒç›´æ¥è¼¸å‡ºï¼Œå †ç–Šé‹ç®—å­èˆ‡å·¦æ‹¬è™Ÿï¼Œ ISP&gt;ICPçš„è©±ç›´æ¥è¼¸å‡ºå †ç–Šä¸­çš„é‹ç®—å­ï¼Œé‡å³æ‹¬è™Ÿè¼¸å‡ºå †ç–Šä¸­çš„é‹ç®—å­è‡³å·¦æ‹¬è™Ÿã€‚ <br>
 
 <br>
 
-<h2> ºtºâªk</h2>
+<h2> æ¼”ç®—æ³•</h2>
 
 
-¥H¤U¬OµêÀÀ½Xªº¹Bºâªk¡A\0ªí¥Ü¤¤§Ç¦¡Åª¨ú§¹²¦¡G <br>
+ä»¥ä¸‹æ˜¯è™›æ“¬ç¢¼çš„é‹ç®—æ³•ï¼Œ\0è¡¨ç¤ºä¸­åºå¼è®€å–å®Œç•¢ï¼š <br>
 
 
 <pre>Procedure Postfix(infix) [<br>    Loop [<br>        op = infix(i) <br>        case [<br>            :x = '\0': <br>                while (stack not empty) <br>                     // output all elements in stack <br>                end <br>                return <br>             :x = '(': <br>                 // put it into stack <br>             :x is operator: <br>                  while (priority(stack[top]) &gt;= <br>                         priority(op)) [<br>                       // out a element from stack <br>                  ]<br>                  // save op into stack <br>             :x = ')': <br>                   while ( stack(top) != '(' ) [<br>                       // out a element from stack <br>                   ]<br>                   top = top - 1  // not out '( <br>             :else: <br>                   // output current op <br>        ]<br>        i++; <br>    ]<br>] <br></pre>
@@ -91,7 +91,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨Ò¦p(a+b)*(c+d)³o­Ó¦¡¤l¡A¨Ìºtºâªkªº¿é¥X¹Lµ{¦p¤U¡G 
+ä¾‹å¦‚(a+b)*(c+d)é€™å€‹å¼å­ï¼Œä¾æ¼”ç®—æ³•çš„è¼¸å‡ºéç¨‹å¦‚ä¸‹ï¼š 
 <table border="1" width="50%">
 
 
@@ -301,10 +301,10 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦pªG­n±N¤¤§Ç¦¡Âà¬°«e§Ç¦¡¡A«h¦bÅª¨ú¤¤§Ç¦¡®É¬O¥Ñ«á©¹«eÅª¨ú¡A¦Ó¥ª¥k¬A¸¹ªº³B²z¤è¦¡¬Û¤Ï¡A¨ä¾l¤£ÅÜ¡A¦ı¿é¥X¤§«e¥²¶·¥ı¸m¤J°ïÅ|¡A«İÂà´«§¹¦¨«á¦A±N°ïÅ|¤¤ªº
-­È¥Ñ¤W©¹¤UÅª¥X¡A¦p¦¹´N¬O«e§Çªí¥Ü¦¡¡C <br>
+å¦‚æœè¦å°‡ä¸­åºå¼è½‰ç‚ºå‰åºå¼ï¼Œå‰‡åœ¨è®€å–ä¸­åºå¼æ™‚æ˜¯ç”±å¾Œå¾€å‰è®€å–ï¼Œè€Œå·¦å³æ‹¬è™Ÿçš„è™•ç†æ–¹å¼ç›¸åï¼Œå…¶é¤˜ä¸è®Šï¼Œä½†è¼¸å‡ºä¹‹å‰å¿…é ˆå…ˆç½®å…¥å †ç–Šï¼Œå¾…è½‰æ›å®Œæˆå¾Œå†å°‡å †ç–Šä¸­çš„
+å€¼ç”±ä¸Šå¾€ä¸‹è®€å‡ºï¼Œå¦‚æ­¤å°±æ˜¯å‰åºè¡¨ç¤ºå¼ã€‚ <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -315,7 +315,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int postfix(char*); // ¤¤§ÇÂà«á§Ç <br>int priority(char); // ¨M©w¹Bºâ¤lÀu¥ı¶¶§Ç <br><br>int main(void) { <br>    char input[80]; <br><br>    printf("¿é¤J¤¤§Ç¹Bºâ¦¡¡G"); <br>    scanf("%s", input); <br>    postfix(input); <br><br>    return 0; <br>} <br><br>int postfix(char* infix) { <br>    int i = 0, top = 0; <br>    char stack[80] = {'\0'}; <br>    char op; <br><br>    while(1) { <br>        op = infix[i]; <br><br>        switch(op) { <br>            case '\0': <br>                while(top &gt; 0) { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                printf("\n"); <br>                return 0; <br>            // ¹Bºâ¤l°ïÅ| <br>            case '(': <br>                if(top &lt; (sizeof(stack) / sizeof(char))) { <br>                    top++; <br>                    stack[top] = op; <br>                } <br>                break; <br>            case '+': case '-': case '*': case '/': <br>                while(priority(stack[top]) &gt;= priority(op)) { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                // ¦s¤J°ïÅ| <br>                if(top &lt; (sizeof(stack) / sizeof(char))) { <br>                    top++; <br>                    stack[top] = op; <br>                } <br>                break; <br>            // ¹J ) ¿é¥X¦Ü ( <br>            case ')': <br>                while(stack[top] != '(') { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                top--;  // ¤£¿é¥X( <br>                break; <br>            // ¹Bºâ¤¸ª½±µ¿é¥X <br>            default: <br>                printf("%c", op); <br>                break; <br>        } <br>        i++; <br>    } <br>} <br><br>int priority(char op) { <br>    int p; <br><br>    switch(op) { <br>       case '+': case '-': <br>            p = 1; <br>            break; <br>        case '*': case '/': <br>            p = 2; <br>            break; <br>        default: <br>            p = 0; <br>            break; <br>    } <br><br>    return p; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int postfix(char*); // ä¸­åºè½‰å¾Œåº <br>int priority(char); // æ±ºå®šé‹ç®—å­å„ªå…ˆé †åº <br><br>int main(void) { <br>    char input[80]; <br><br>    printf("è¼¸å…¥ä¸­åºé‹ç®—å¼ï¼š"); <br>    scanf("%s", input); <br>    postfix(input); <br><br>    return 0; <br>} <br><br>int postfix(char* infix) { <br>    int i = 0, top = 0; <br>    char stack[80] = {'\0'}; <br>    char op; <br><br>    while(1) { <br>        op = infix[i]; <br><br>        switch(op) { <br>            case '\0': <br>                while(top &gt; 0) { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                printf("\n"); <br>                return 0; <br>            // é‹ç®—å­å †ç–Š <br>            case '(': <br>                if(top &lt; (sizeof(stack) / sizeof(char))) { <br>                    top++; <br>                    stack[top] = op; <br>                } <br>                break; <br>            case '+': case '-': case '*': case '/': <br>                while(priority(stack[top]) &gt;= priority(op)) { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                // å­˜å…¥å †ç–Š <br>                if(top &lt; (sizeof(stack) / sizeof(char))) { <br>                    top++; <br>                    stack[top] = op; <br>                } <br>                break; <br>            // é‡ ) è¼¸å‡ºè‡³ ( <br>            case ')': <br>                while(stack[top] != '(') { <br>                    printf("%c", stack[top]); <br>                    top--; <br>                } <br>                top--;  // ä¸è¼¸å‡º( <br>                break; <br>            // é‹ç®—å…ƒç›´æ¥è¼¸å‡º <br>            default: <br>                printf("%c", op); <br>                break; <br>        } <br>        i++; <br>    } <br>} <br><br>int priority(char op) { <br>    int p; <br><br>    switch(op) { <br>       case '+': case '-': <br>            p = 1; <br>            break; <br>        case '*': case '/': <br>            p = 2; <br>            break; <br>        default: <br>            p = 0; <br>            break; <br>    } <br><br>    return p; <br>} <br></pre>
 
 
 <br>
@@ -329,7 +329,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class InFix {<br>    private static int priority(char op) {  <br>        switch(op) { <br>           case '+': case '-': <br>                return 1; <br>            case '*': case '/': <br>                return 2;<br>            default: <br>                return 0;<br>        }  <br>    }<br>    <br>    public static char[] toPosfix(char[] infix) {<br>        char[] stack = new char[infix.length]; <br>        char[] postfix = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br><br>        int top = 0;<br>        for(int i = 0; i &lt; infix.length; i++) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // ¹Bºâ¤l°ïÅ| <br>                case '(': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // ¦s¤J°ïÅ| <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // ¹J ) ¿é¥X¦Ü ( <br>                case ')': <br>                    while(stack[top] != '(') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ¤£¿é¥X( <br>                    break; <br>                // ¹Bºâ¤¸ª½±µ¿é¥X <br>                default: <br>                    buffer.append(op);<br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        }<br>        <br>        return buffer.toString().toCharArray();<br>    }<br>    <br>    public static char[] toPrefix(char[] infix) {<br>        char[] stack = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br>        <br>        int top = 0;<br>        for(int i = infix.length - 1; i &gt;= 0; i--) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // ¹Bºâ¤l°ïÅ| <br>                case ')': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // ¦s¤J°ïÅ| <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // ¹J ( ¿é¥X¦Ü ) <br>                case '(': <br>                    while(stack[top] != ')') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ¤£¿é¥X) <br>                    break; <br>                // ¹Bºâ¤¸ª½±µ¿é¥X <br>                default: <br>                    buffer.append(op); <br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        } <br>        <br>        return buffer.reverse().toString().toCharArray();<br>    }<br>    <br>    public static void main(String[] args) {<br>        String infix = "(a+b)*(c+d)";<br>        <br>        System.out.println(<br>                    InFix.toPosfix(infix.toCharArray()));<br>        System.out.println(<br>                    InFix.toPrefix(infix.toCharArray()));<br>    }<br>} </pre>
+<pre>public class InFix {<br>    private static int priority(char op) {  <br>        switch(op) { <br>           case '+': case '-': <br>                return 1; <br>            case '*': case '/': <br>                return 2;<br>            default: <br>                return 0;<br>        }  <br>    }<br>    <br>    public static char[] toPosfix(char[] infix) {<br>        char[] stack = new char[infix.length]; <br>        char[] postfix = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br><br>        int top = 0;<br>        for(int i = 0; i &lt; infix.length; i++) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // é‹ç®—å­å †ç–Š <br>                case '(': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // å­˜å…¥å †ç–Š <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // é‡ ) è¼¸å‡ºè‡³ ( <br>                case ')': <br>                    while(stack[top] != '(') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ä¸è¼¸å‡º( <br>                    break; <br>                // é‹ç®—å…ƒç›´æ¥è¼¸å‡º <br>                default: <br>                    buffer.append(op);<br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        }<br>        <br>        return buffer.toString().toCharArray();<br>    }<br>    <br>    public static char[] toPrefix(char[] infix) {<br>        char[] stack = new char[infix.length];<br>        char op; <br><br>        StringBuffer buffer = new StringBuffer();<br>        <br>        int top = 0;<br>        for(int i = infix.length - 1; i &gt;= 0; i--) { <br>            op = infix[i]; <br>            switch(op) {  <br>                // é‹ç®—å­å †ç–Š <br>                case ')': <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                case '+': case '-': case '*': case '/': <br>                    while(priority(stack[top]) &gt;= <br>                          priority(op)) { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    // å­˜å…¥å †ç–Š <br>                    if(top &lt; stack.length) { <br>                        top++; <br>                        stack[top] = op; <br>                    } <br>                    break; <br>                // é‡ ( è¼¸å‡ºè‡³ ) <br>                case '(': <br>                    while(stack[top] != ')') { <br>                        buffer.append(stack[top]);<br>                        top--; <br>                    } <br>                    top--;  // ä¸è¼¸å‡º) <br>                    break; <br>                // é‹ç®—å…ƒç›´æ¥è¼¸å‡º <br>                default: <br>                    buffer.append(op); <br>                    break; <br>            } <br>        } <br>        <br>        while(top &gt; 0) { <br>            buffer.append(stack[top]);<br>            top--; <br>        } <br>        <br>        return buffer.reverse().toString().toCharArray();<br>    }<br>    <br>    public static void main(String[] args) {<br>        String infix = "(a+b)*(c+d)";<br>        <br>        System.out.println(<br>                    InFix.toPosfix(infix.toCharArray()));<br>        System.out.println(<br>                    InFix.toPrefix(infix.toCharArray()));<br>    }<br>} </pre>
 
 <br>
 
