--- a/AlgorithmGossip/InterpolationSearch.htm
+++ b/AlgorithmGossip/InterpolationSearch.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>´¡¸É·j´Mªk</title>
+  <title>æ’è£œæœå°‹æ³•</title>
 </head>
 
 
@@ -51,28 +51,28 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ´¡¸É·j´Mªk</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æ’è£œæœå°‹æ³•</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¦pªG«o·j´Mªº¸ê®Æ¤À§G¥­§¡ªº¸Ü¡A¥i¥H¨Ï¥Î´¡¸É¡]Interpolation¡^·j´Mªk¨Ó¶i¦æ·j´M¡A¦b·j´Mªº¹ï¶H¤j©ó500®É¡A´¡¸É·j´Mªk·|¤ñ ¤G¤À·j´Mªk ¨Óªº§Ö³t¡C<br>
-<h2>¸Ñªk</h2>
-´¡¸É·j´Mªk¬O¥H¸ê®Æ¤À§Gªºªñ¦üª½½u¨Ó§@¤ñ¨Ò¹Bºâ¡A¥H¨D¥X¤¤¶¡ªº¯Á¤Ş¨Ã¶i¦æ¸ê®Æ¤ñ¹ï¡A¦pªG¨ú¥Xªº­È¤p©ó­n´M§äªº­È¡A«h´£°ª¤U¬É¡A¦pªG¨ú¥Xªº­È¤j©ó­n´M§äªº
-­È¡A«h­°§C¤U¬É¡A¦p¦¹¤£Â_ªº´î¤Ö·j´Mªº½d³ò¡A©Ò¥H¨ä¥»­ì«h»P¤G¤À·j´Mªk¬O¬Û¦Pªº¡A¦Ü©ó¤¤¶¡­Èªº´M§ä¬O³z¹L¤ñ¨Ò¹Bºâ¡A¦p¤U©Ò¥Ü¡A¨ä¤¤K¬O«ü©w­n´M§äªº¹ï¶H¡A
-¦Óm«h¬O¥i¯àªº¯Á¤Ş­È¡G <br>
-<div style="text-align: center;"><img style="width: 435px; height: 182px;" alt="´¡¸É·j´M" title="´¡¸É·j´M" src="images/interpolationSearch-1.jpg"></div>
+<h2>èªªæ˜</h2>
+å¦‚æœå»æœå°‹çš„è³‡æ–™åˆ†ä½ˆå¹³å‡çš„è©±ï¼Œå¯ä»¥ä½¿ç”¨æ’è£œï¼ˆInterpolationï¼‰æœå°‹æ³•ä¾†é€²è¡Œæœå°‹ï¼Œåœ¨æœå°‹çš„å°è±¡å¤§æ–¼500æ™‚ï¼Œæ’è£œæœå°‹æ³•æœƒæ¯” äºŒåˆ†æœå°‹æ³• ä¾†çš„å¿«é€Ÿã€‚<br>
+<h2>è§£æ³•</h2>
+æ’è£œæœå°‹æ³•æ˜¯ä»¥è³‡æ–™åˆ†ä½ˆçš„è¿‘ä¼¼ç›´ç·šä¾†ä½œæ¯”ä¾‹é‹ç®—ï¼Œä»¥æ±‚å‡ºä¸­é–“çš„ç´¢å¼•ä¸¦é€²è¡Œè³‡æ–™æ¯”å°ï¼Œå¦‚æœå–å‡ºçš„å€¼å°æ–¼è¦å°‹æ‰¾çš„å€¼ï¼Œå‰‡æé«˜ä¸‹ç•Œï¼Œå¦‚æœå–å‡ºçš„å€¼å¤§æ–¼è¦å°‹æ‰¾çš„
+å€¼ï¼Œå‰‡é™ä½ä¸‹ç•Œï¼Œå¦‚æ­¤ä¸æ–·çš„æ¸›å°‘æœå°‹çš„ç¯„åœï¼Œæ‰€ä»¥å…¶æœ¬åŸå‰‡èˆ‡äºŒåˆ†æœå°‹æ³•æ˜¯ç›¸åŒçš„ï¼Œè‡³æ–¼ä¸­é–“å€¼çš„å°‹æ‰¾æ˜¯é€éæ¯”ä¾‹é‹ç®—ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼Œå…¶ä¸­Kæ˜¯æŒ‡å®šè¦å°‹æ‰¾çš„å°è±¡ï¼Œ
+è€Œmå‰‡æ˜¯å¯èƒ½çš„ç´¢å¼•å€¼ï¼š <br>
+<div style="text-align: center;"><img style="width: 435px; height: 182px;" alt="æ’è£œæœå°‹" title="æ’è£œæœå°‹" src="images/interpolationSearch-1.jpg"></div>
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br>int intsrch(int[], int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("¼Æ¦C¡G"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\n¿é¤J´M§ä¹ï¶H¡G"); <br>    scanf("%d", &amp;find); <br><br>    if((i = intsrch(number, find)) &gt;= 0) <br>        printf("§ä¨ì¼Æ¦r©ó¯Á¤Ş %d ", i); <br>    else <br>        printf("\n§ä¤£¨ì«ü©w¼Æ"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int intsrch(int number[], int find) { <br>    int low, mid, upper; <br><br>    low = 0; <br>    upper = MAX - 1; <br><br>    while(low &lt;= upper) { <br>        mid = (upper-low)* <br>            (find-number[low])/(number[upper]-number[low]) <br>            + low; <br>        if(mid &lt; low || mid &gt; upper) <br>            return -1; <br><br>        if(find &lt; number[mid]) <br>            upper = mid - 1; <br>        else if(find &gt; number[mid]) <br>            low = mid + 1; <br>        else <br>            return mid; <br>     } <br><br>     return -1;<br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // ¦V¥k§ä <br>            while(number[--j] &gt; s) ;  // ¦V¥ª§ä <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>        quicksort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br>int intsrch(int[], int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("æ•¸åˆ—ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\nè¼¸å…¥å°‹æ‰¾å°è±¡ï¼š"); <br>    scanf("%d", &amp;find); <br><br>    if((i = intsrch(number, find)) &gt;= 0) <br>        printf("æ‰¾åˆ°æ•¸å­—æ–¼ç´¢å¼• %d ", i); <br>    else <br>        printf("\næ‰¾ä¸åˆ°æŒ‡å®šæ•¸"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int intsrch(int number[], int find) { <br>    int low, mid, upper; <br><br>    low = 0; <br>    upper = MAX - 1; <br><br>    while(low &lt;= upper) { <br>        mid = (upper-low)* <br>            (find-number[low])/(number[upper]-number[low]) <br>            + low; <br>        if(mid &lt; low || mid &gt; upper) <br>            return -1; <br><br>        if(find &lt; number[mid]) <br>            upper = mid - 1; <br>        else if(find &gt; number[mid]) <br>            low = mid + 1; <br>        else <br>            return mid; <br>     } <br><br>     return -1;<br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // å‘å³æ‰¾ <br>            while(number[--j] &gt; s) ;  // å‘å·¦æ‰¾ <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>        quicksort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>    } <br>} <br></pre>
 
 <br>
 
@@ -81,7 +81,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class InterpolationSearch {<br>    public static int search(int[] number, int des) { <br>        int low = 0; <br>        int upper = number.length - 1; <br><br>        while(low &lt;= upper) { <br>            int mid = (upper-low)* <br>               (des-number[low])/(number[upper]-number[low]) <br>                + low; <br>            if(mid &lt; low || mid &gt; upper) <br>                return -1; <br><br>            if(des &lt; number[mid]) <br>                upper = mid - 1; <br>            else if(des &gt; number[mid]) <br>                low = mid + 1; <br>            else <br>                return mid; <br>        }<br><br>        return -1;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = InterpolationSearch.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("§ä¨ì¼Æ­È©ó¯Á¤Ş" + find); <br>        else <br>            System.out.println("§ä¤£¨ì¼Æ­È"); <br>    } <br>}</pre>
+<pre>public class InterpolationSearch {<br>    public static int search(int[] number, int des) { <br>        int low = 0; <br>        int upper = number.length - 1; <br><br>        while(low &lt;= upper) { <br>            int mid = (upper-low)* <br>               (des-number[low])/(number[upper]-number[low]) <br>                + low; <br>            if(mid &lt; low || mid &gt; upper) <br>                return -1; <br><br>            if(des &lt; number[mid]) <br>                upper = mid - 1; <br>            else if(des &gt; number[mid]) <br>                low = mid + 1; <br>            else <br>                return mid; <br>        }<br><br>        return -1;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = InterpolationSearch.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("æ‰¾åˆ°æ•¸å€¼æ–¼ç´¢å¼•" + find); <br>        else <br>            System.out.println("æ‰¾ä¸åˆ°æ•¸å€¼"); <br>    } <br>}</pre>
 <br>
 
 
